--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <span class="js-num"></span>
     <script>
         var a = 0;
-        $('.js-test').on('input propertychange blur focus', function(){
+        $('.js-test').on('input blur focus', function(){
             $('.js-num').text(++a);
         })
     </script>
